tests/dataset/tpc-ds/compiler/java/q68.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq683935617294/001/Q68.java:71: error: bad operand types for binary operator '-'
}}).get().stream().mapToInt(n -> ((Number)n).intValue()).sum()).doubleValue() - ((Number)(new java.util.function.Supplier<List<Integer>>(){public List<Integer> get(){
                                                                              ^
  first type:  Number
  second type: double
1 error
